[nobug] Increase PermGen and Heap space for tests
Signed-off-by: Joe Somebody <somebody@someplace.net>